Removing the active object from the current collection crashes Blender #55721

Closed
opened 2018-07-03 15:00:35 +02:00 by ilir beqiri · 5 comments

System Information
Operating system and graphics card
Windows 10
Nvidia Quadro K4000

Blender Version
Blender 2.8 Alpha e856eb7

Short description of error
Removing the active object from the current (default) collection crashes Blender

Exact steps for others to reproduce the error
Open a new scene. Select the default cube. Go to the object palette, scroll down to the Collection drop down. Press the X to Remove the active object from this collection. Object disappears from the outline. If you now try to select any other object from the Outliner or the 3D viewport, Blender crashes. This isn't the case when you first create a new collection, add the current active object to it and then remove it from the default Collection.

**System Information** Operating system and graphics card Windows 10 Nvidia Quadro K4000 **Blender Version** Blender 2.8 Alpha e856eb7 **Short description of error** Removing the active object from the current (default) collection crashes Blender **Exact steps for others to reproduce the error** Open a new scene. Select the default cube. Go to the object palette, scroll down to the Collection drop down. Press the X to Remove the active object from this collection. Object disappears from the outline. If you now try to select any other object from the Outliner or the 3D viewport, Blender crashes. This isn't the case when you first create a new collection, add the current active object to it and then remove it from the default Collection.
Author

Added subscriber: @ilirbeqiri

Added subscriber: @ilirbeqiri

Added subscribers: @brecht, @mont29

Added subscribers: @brecht, @mont29
Brecht Van Lommel was assigned by Bastien Montagne 2018-07-24 09:22:55 +02:00

Confirmed, @brecht want to have a look? Thanks.

Confirmed, @brecht want to have a look? Thanks.

This issue was referenced by 882ccd924b

This issue was referenced by 882ccd924ba9febaec2db53831d95bc4a6c45ef3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55721
No description provided.