Fix T55721: crashes with collections panel in object properties.